crates/api-snowflake-rest/src/tests/snapshots/snowflake_compatibility/api_snowflake_rest__tests__test_rest_quick_sqls__snowflake_compatibility__abort_ok_query.snap
---
source: crates/api-snowflake-rest/src/tests/test_rest_quick_sqls.rs
description: "Async SQL #1 [spent: 90/90ms]: SELECT sleep(1);>\nQuery UUID: 00000000-0000-0000-0000-077eef9dc19a"
expression: snapshot
---
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "total": null,
    "queryResultFormat": null,
    "queryId": "UUID"
  },
  "success": true,
  "message": "successfully executed",
  "code": null
}
