crates/api-snowflake-rest/src/tests/snapshots/snowflake_compatibility/api_snowflake_rest__tests__test_rest_quick_sqls__snowflake_compatibility__alter_missing_table.snap
---
source: crates/api-snowflake-rest/src/tests/test_rest_quick_sqls.rs
description: "SQL #1 [spent: 193/193ms]: ALTER TABLE embucket.public.test ADD COLUMN new_col INT\nQuery UUID: 00000000-0000-0000-0000-077ed59f1a0e"
expression: pretty_json
---
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "total": null,
    "queryResultFormat": null,
    "errorCode": "002003",
    "sqlState": "42S02",
    "queryId": "UUID"
  },
  "success": false,
  "message": "SQL compilation error: Table 'embucket.public.test' does not exist or not authorized",
  "code": "002003"
}
