crates/api-snowflake-rest/src/tests/snapshots/snowflake_compatibility/api_snowflake_rest__tests__test_rest_quick_sqls__snowflake_compatibility__alter_table_schema_missing.snap
---
source: crates/api-snowflake-rest/src/tests/test_rest_quick_sqls.rs
description: "SQL #1 [spent: 205/205ms]: ALTER TABLE embucket.missing_schema.test ADD COLUMN new_col INT\nQuery UUID: 00000000-0000-0000-0000-077ed58542f5"
expression: pretty_json
---
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "total": null,
    "queryResultFormat": null,
    "errorCode": "002003",
    "sqlState": "02000",
    "queryId": "UUID"
  },
  "success": false,
  "message": "SQL compilation error: Schema 'embucket.missing_schema' does not exist or not authorized",
  "code": "002003"
}
