crates/api-snowflake-rest/src/tests/snapshots/snowflake_compatibility/api_snowflake_rest__tests__test_rest_quick_sqls__snowflake_compatibility__async_sleep_result-2.snap
---
source: crates/api-snowflake-rest/src/tests/test_rest_quick_sqls.rs
description: "SQL #2 [spent: 1117/1216ms]: !result 00000000-0000-0000-0000-077eefac6053\nQuery UUID: 00000000-0000-0000-0000-077eefac6053"
expression: snapshot
---
{
  "data": {
    "rowtype": [
      {
        "name": "sleep(Int64(1))",
        "database": "",
        "schema": "",
        "table": "",
        "nullable": true,
        "type": "fixed",
        "byteLength": null,
        "length": null,
        "scale": 0,
        "precision": 38,
        "collation": null
      }
    ],
    "rowsetBase64": null,
    "rowset": [
      [
        1
      ]
    ],
    "total": 1,
    "queryResultFormat": "json",
    "sqlState": "02000",
    "queryId": "UUID"
  },
  "success": true,
  "message": "successfully executed",
  "code": null
}
