crates/api-snowflake-rest/src/tests/snapshots/snowflake_compatibility/api_snowflake_rest__tests__test_rest_quick_sqls__snowflake_compatibility__cancel_ok_query-2.snap
---
source: crates/api-snowflake-rest/src/tests/test_rest_quick_sqls.rs
description: "SQL #2 [spent: 208/308ms]: SELECT SYSTEM$CANCEL_QUERY('00000000-0000-0000-0000-077eef9d06c3');\nQuery UUID: 00000000-0000-0000-0000-077eef9d0660"
expression: snapshot
---
{
  "data": {
    "rowtype": [
      {
        "name": "system$cancel_query",
        "database": "",
        "schema": "",
        "table": "",
        "nullable": false,
        "type": "text",
        "byteLength": 16777216,
        "length": 16777216,
        "scale": null,
        "precision": null,
        "collation": null
      }
    ],
    "rowsetBase64": null,
    "rowset": [
      [
        "query [UUID] terminated."
      ]
    ],
    "total": 1,
    "queryResultFormat": "json",
    "sqlState": "02000",
    "queryId": "UUID"
  },
  "success": true,
  "message": "successfully executed",
  "code": null
}
